--- a/packages/front/app/PageContainer.module.css
+++ b/packages/front/app/PageContainer.module.css
@@ -2,24 +2,17 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: start;
-  width: 100%;
-  padding-bottom: calc(4vh - 2px);
-  min-height: 100%;
+  align-items: flex-start;
+  width: calc(100dvw - var(--content-margin-left));
+  min-height: calc(
+    100dvh - var(--topbar-height, 0px) - var(--tabs-height, 0px)
+  );
 }
 
-.container.default > main {
-  width: 95%;
-  height: 100%;
-
-  @media (width >= 800px) {
-    width: calc(800px * 0.95);
-  }
-}
-
-.container.full > main {
+.container > main {
   width: 100%;
   height: 100%;
+  max-width: 800px;
 }
 
 .container > main h1,
