--- a/packages/front/app/TabsContainer.module.css
+++ b/packages/front/app/TabsContainer.module.css
@@ -7,7 +7,7 @@
     position: fixed;
     z-index: 1;
     top: var(--topbar-height);
-    width: calc(100vw - var(--sidebar-width));
+    width: calc(100dvw - var(--content-margin-left));
     height: var(--tabs-height);
   }
 }
