--- a/packages/front/app/music/search/page.module.css
+++ b/packages/front/app/music/search/page.module.css
@@ -3,6 +3,7 @@
   flex-flow: row;
   gap: 1rem;
   height: 1.5rem;
+  margin: 0 1rem;
   align-items: center;
 
   > * {
@@ -12,7 +13,7 @@
 
 .searchButton {
   flex: 1;
-  font-size: 0.9rem;
-  font-weight: 400;
-  padding: 0.7rem;
+  font-size: 0.9rem !important;
+  font-weight: 400 !important;
+  padding: 0.7rem !important;
 }
