--- a/packages/front/app/style.module.css
+++ b/packages/front/app/style.module.css
@@ -1,48 +1,25 @@
-.container {
+*:has(> .title) {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: calc(100vh - 78px);
-}
 
-.container .title .titlePart1 {
-  color: var(--color-green-400);
-}
-
-.container .title .titlePart2 {
-  color: var(--color-orange-400);
-}
-
-.container .stamp {
-  .version {
-    color: var(--color-red-300);
-    line-height: 1;
-    font-size: 1.5rem;
-    margin-bottom: 0;
-  }
-  .date {
-    margin-top: 0;
-    color: var(--color-primary-200);
-    font-size: 0.75rem;
+  @media (width < 500px) {
+    padding: 0 2rem;
   }
 }
 
-.title a {
-  color: var(--color-blue-300);
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.stamp {
+  position: fixed;
+  bottom: 1rem;
+  left: var(--content-margin-left);
+  text-align: center;
+  width: calc(100dvw - var(--content-margin-left));
+  color: var(--color-gray-300);
 }
 
 .title {
-  margin: 0 0 1rem;
   line-height: 1.15;
-  font-size: 3.6rem;
+  font-size: 2rem;
+  margin: auto 0;
 }
 
 .title,
