--- a/packages/front/modules/ui-kit/input/Button.module.css
+++ b/packages/front/modules/ui-kit/input/Button.module.css
@@ -1,7 +1,34 @@
+body:has(.button) {
+  /* Variables dark theme */
+  --button-dark-background-color: var(--button-link-color);
+  --button-dark-color: black;
+  --button-dark-hover-background-color: var(--button-link-color-hover);
+  --button-dark-disabled-background-color: var(--color-gray-200);
+  --button-dark-disabled-color: var(--color-gray-500);
+
+  /* Variables light theme */
+  --button-light-background-color: var(--color-primary);
+  --button-light-color: white;
+  --button-light-hover-background-color: var(--color-primary-hover);
+  --button-light-disabled-background-color: hsl(
+    from var(--color-primary) h 30% l
+  );
+
+  --button-light-disabled-color: var(--color-gray-100);
+
+  /* Por defecto: dark theme */
+  --button-background-color: var(--button-dark-background-color);
+  --button-color: var(--button-dark-color);
+  --button-hover-background-color: var(--button-dark-hover-background-color);
+  --button-disabled-background-color: var(
+    --button-dark-disabled-background-color
+  );
+  --button-disabled-color: var(--button-dark-disabled-color);
+}
 .button {
   width: 100%;
-  background: var(--color-primary);
-  color: white;
+  color: var(--button-color);
+  background-color: var(--button-background-color);
   border: none;
   border-radius: 0.7rem;
   padding: 1rem;
@@ -13,11 +40,23 @@
   justify-content: center;
 
   &:disabled {
-    background-color: hsl(from var(--color-primary-500) h 50% l);
+    background-color: var(--button-disabled-background-color);
+    color: var(--button-disabled-color);
     cursor: not-allowed;
   }
 
   &:hover:not(&:disabled) {
-    background-color: var(--color-primary-hover);
+    background-color: var(--button-hover-background-color);
+    cursor: pointer;
   }
+}
+
+.light {
+  --button-background-color: var(--button-light-background-color);
+  --button-color: var(--button-light-color);
+  --button-hover-background-color: var(--button-light-hover-background-color);
+  --button-disabled-background-color: var(
+    --button-light-disabled-background-color
+  );
+  --button-disabled-color: var(--button-light-disabled-color);
 }
