--- a/packages/front/modules/ui-kit/menus/Sidebar.module.css
+++ b/packages/front/modules/ui-kit/menus/Sidebar.module.css
@@ -1,7 +1,7 @@
 .sidebar {
   width: var(--sidebar-width, 240px);
   min-width: var(--sidebar-min-width, 10rem);
-  height: 100vh;
+  height: 100dvh;
   padding: 20px;
   margin-top: var(--sidebar-margin-top, 0);
 
