--- a/packages/front/modules/ui-kit/menus/Topbar.module.css
+++ b/packages/front/modules/ui-kit/menus/Topbar.module.css
@@ -5,7 +5,7 @@
 
   align-items: center;
   height: var(--topbar-height, 3rem);
-  width: 100vw;
+  width: 100%;
   background-color: var(--color-gray-1000);
   border-bottom: 1px solid var(--color-gray-800);
   color: var(--button-link-color);
