--- a/packages/front/styles/resources/resource-list-entry.css
+++ b/packages/front/styles/resources/resource-list-entry.css
@@ -59,7 +59,7 @@
           display: flex;
           flex-basis: 100%;
           height: 0;
-          margin-bottom: 3vh;
+          margin-bottom: 3dvh;
         }
 
         .ui-kit-resource-input-text:last-child,
