chore: update infrastructure

--- a/packages/front/app/auth/(login-register)/styles.module.css
+++ b/packages/front/app/auth/(login-register)/styles.module.css
@@ -1,5 +1,7 @@
 .container {
   align-items: center !important;
+  display: flex;
+  justify-content: center;
   > main {
     display: flex;
     justify-content: center;
