--- a/packages/front/app/auth/(login-register)/register/done/styles.module.css
+++ b/packages/front/app/auth/(login-register)/register/done/styles.module.css
@@ -1,9 +1,8 @@
 *:has(> .container) {
-  justify-content: start !important;
+  justify-content: center !important;
 
   .container {
-    color: var(--color-gray-800);
-    margin-top: 10rem;
+    color: var(--color-gray-50);
     font-size: 1rem;
     max-width: 30rem;
 
@@ -18,7 +17,7 @@
   &,
   &:hover {
     cursor: not-allowed;
-    color: var(--color-gray-500) !important;
+    color: var(--color-gray-300) !important;
     text-decoration: none !important;
   }
 }
