--- a/packages/front/modules/ui-kit/menus/Tabs.module.css
+++ b/packages/front/modules/ui-kit/menus/Tabs.module.css
@@ -8,6 +8,8 @@
   color: var(--button-link-color);
   background: var(--color-gray-900);
   border-bottom: 1px solid var(--color-gray-800);
+
+  user-select: none;
 }
 
 .item {
