--- a/packages/front/app/LogginButton.module.css
+++ b/packages/front/app/LogginButton.module.css
@@ -1,5 +1,13 @@
 .button {
-  padding: 0.3rem 1.5rem !important;
-  border-radius: 1rem !important;
-  font-weight: bold !important;
+  padding: 0.3rem 1.5rem;
+  border-radius: 1rem;
+  font-weight: bold;
+}
+
+@media (width < 600px) {
+  .button {
+    padding-right: 0.75rem;
+    padding-left: 0.75rem;
+    font-size: 0.8rem;
+  }
 }
