--- a/packages/front/modules/series/episodes/history/entry/body/style.module.css
+++ b/packages/front/modules/series/episodes/history/entry/body/style.module.css
@@ -2,23 +2,13 @@
   width: 4rem;
 }
 
-.start :global(.ui-kit-input-number),
-.end :global(.ui-kit-input-number) {
-  width: 6rem;
+:global(.line):has(.start) {
+  gap: 0.8rem;
+  justify-content: left;
 }
 
-.start :global(.ui-kit-resource-input),
-.end :global(.ui-kit-resource-input) {
-  width: auto;
-}
-
-.start,
-.end {
-  display: flex;
-  flex-grow: 1;
-  flex-shrink: 1;
-  column-gap: 1rem;
-  align-items: center;
+.start {
+  margin-right: 2rem;
 }
 
 .duration {
