--- a/packages/front/styles/globals-ui-kit.css
+++ b/packages/front/styles/globals-ui-kit.css
@@ -70,7 +70,7 @@
   overflow: hidden;
 
   &.is-null:not(:focus) {
-    background-color: #ddd;
+    background-color: var(--color-gray-500);
   }
 }
 
@@ -167,5 +167,103 @@
   input[type="checkbox"],
   label {
     cursor: pointer;
+  }
+}
+
+/* time */
+
+.ui-kit-input-time {
+  display: flex;
+
+  .time-inputs {
+    display: flex;
+    background: white;
+    border-radius: 5px;
+    border-bottom-right-radius: 0px;
+    border-top-right-radius: 0px;
+    border-right: none;
+    border: 1px solid black;
+    gap: 0px;
+
+    &:has(.is-null) {
+      background: var(--color-gray-500);
+    }
+  }
+
+  .time-input-group {
+    display: flex;
+    height: 100%;
+
+    &:first-child .ui-kit-input-number {
+      width: calc(3ch + 4px);
+    }
+
+    &:last-child .ui-kit-input-number {
+      width: 5ch;
+      text-align: left;
+      box-sizing: border-box; /* asegura que padding no afecte */
+    }
+  }
+
+  .time-separator {
+    line-height: 0.1rem;
+    font-weight: normal;
+    padding: 0 3px;
+    user-select: none;
+    color: black;
+  }
+
+  .ui-kit-input-number {
+    text-align: right;
+    padding: 0rem;
+    -moz-appearance: textfield;
+    appearance: textfield;
+    background: none;
+    border: none;
+
+    &.is-null {
+      background: none;
+    }
+
+    /* Ocultar los controles nativos del input number */
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
+
+  /* Controles personalizados */
+  .time-controls {
+    display: flex;
+    flex-shrink: 1;
+    flex-direction: column;
+
+    button {
+      user-select: none;
+    }
+  }
+
+  .time-control-btn {
+    width: 1rem;
+    padding: 0;
+    border: 1px solid black;
+    border-left: none;
+    background: var(--color-gray-100);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 8px;
+    height: 100%;
+  }
+
+  .time-control-up {
+    border-radius: 0 3px 0 0;
+    border-bottom: none;
+  }
+
+  .time-control-down {
+    border-radius: 0 0 3px 0;
   }
 }
