--- a/packages/front/modules/ui-kit/expandable/styles.module.css
+++ b/packages/front/modules/ui-kit/expandable/styles.module.css
@@ -84,14 +84,14 @@
   z-index: 10;
   top: 0.5rem;
   right: 1rem;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(255, 255, 255, 0.4);
   color: white;
 
   opacity: 0;
   pointer-events: none;
 
   &:hover {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(255, 255, 255, 0.6);
   }
 }
 
@@ -145,9 +145,10 @@
 
 /* Contenido expandido */
 .fullscreenContent {
+  --background: var(--color-gray-800);
   position: relative;
   padding: 3rem 1rem 1rem 1rem;
-  background-color: white;
+  background: var(--background);
   border-radius: 12px;
   box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
   overflow: hidden;
@@ -178,7 +179,7 @@
   line-height: 1.5;
   resize: none;
   outline: none;
-  background-color: #fafafa;
+  background: var(--background);
   box-sizing: border-box;
 }
 
@@ -191,7 +192,7 @@
   font-size: 16px;
   line-height: 1.6;
   overflow: auto;
-  background-color: #1e1e1e;
+  background: var(--background);
   color: #d4d4d4;
   font-family: Monaco, Menlo, "Ubuntu Mono", monospace;
   box-sizing: border-box;
@@ -203,7 +204,7 @@
   min-height: 100% !important;
   max-height: 100% !important;
   overflow: auto;
-  background-color: white;
+  background: var(--background);
   box-sizing: border-box;
 }
 
