--- a/packages/front/modules/musics/playlists/list/Item.module.css
+++ b/packages/front/modules/musics/playlists/list/Item.module.css
@@ -10,7 +10,7 @@
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  background: linear-gradient(135deg, #2196f3 0%, #9c27b0 100%);
+  background: var(--color-playlist);
   padding: 1rem 1.5rem;
   display: flex;
   gap: 1.5rem;
@@ -19,8 +19,10 @@
 
   user-select: none;
 
-  &:hover {
+  &:hover,
+  &:focus {
     text-decoration: inherit;
+    color: inherit;
   }
 }
 
