--- a/packages/front/modules/musics/musics/styles.module.css
+++ b/packages/front/modules/musics/musics/styles.module.css
@@ -31,6 +31,10 @@
   }
 }
 
-.contextMenuItem {
-  cursor: pointer;
+.playlistSelectorModal > section {
+  > :first-child {
+    max-height: 300px;
+    overflow-y: auto;
+  }
+  width: 300px;
 }
