--- a/packages/front/modules/musics/playlists/list/Item.module.css
+++ b/packages/front/modules/musics/playlists/list/Item.module.css
@@ -58,15 +58,22 @@
   flex-direction: column;
   justify-content: space-between;
   align-self: stretch;
+
+  min-width: 0;
 }
 
 .playlistTitle {
   font-size: 2.5rem !important;
   font-weight: bold;
   margin: 0 0 16px 0;
-  line-height: 1.2;
-  word-break: normal;
   align-self: flex-start;
+  text-align: left !important;
+
+  text-overflow: ellipsis;
+  padding-bottom: 4px;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 100%;
 }
 
 .playlistStats {
@@ -84,6 +91,7 @@
   display: flex;
   align-items: center;
   gap: 4px;
+  white-space: nowrap;
 
   &.createdAt {
     svg {
