--- a/packages/front/modules/ui-kit/ContextMenu/ContextMenu.module.css
+++ b/packages/front/modules/ui-kit/ContextMenu/ContextMenu.module.css
@@ -72,11 +72,15 @@
 
 /* Variantes de colores para items específicos */
 .menuItem.danger {
-  color: #dc2626;
+  background-color: var(--color-red-100);
+}
+
+.menuItem.pointer {
+  cursor: pointer;
 }
 
 .menuItem.danger:hover {
-  background-color: #fef2f2;
+  background-color: var(--color-red-200);
 }
 
 .menuItem.primary {
