--- a/packages/front/modules/ui-kit/spinner/fetching.style.module.css
+++ b/packages/front/modules/ui-kit/spinner/fetching.style.module.css
@@ -1,11 +1,18 @@
-.loading {
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  margin-top: 3rem;
+main:has(> .loading) {
+  min-height: inherit;
+  position: relative;
 
-  --spinner-size: 5rem;
-  --spinner-width: 0.4rem;
+  .loading {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* Variables */
+    --spinner-size: 5rem;
+    --spinner-width: 0.4rem;
+  }
 }
