--- a/packages/front/modules/musics/playlists/SettingsButton.module.css
+++ b/packages/front/modules/musics/playlists/SettingsButton.module.css
@@ -1,24 +1,19 @@
 .controlButton {
-  width: 2.5rem;
+  width: 0.5rem;
   height: 2.5rem;
-  padding: 0rem;
+  padding: 0;
   background: none;
   margin: 0;
   border: none;
   border-radius: 50%; /* Hace que sea un círculo perfecto */
-  color: var(--color-gray-50);
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: all 0.2s ease;
+  color: var(--color-gray-200);
 
   &:hover {
+    color: var(--color-gray-25);
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.25);
-  }
-
-  &:active {
-    background-color: rgba(0, 0, 0, 0.5);
   }
 
   &.overWhite {
@@ -26,11 +21,6 @@
 
     &:hover {
       cursor: pointer;
-      background-color: rgba(0, 0, 0, 0.125);
-    }
-
-    &:active {
-      background-color: rgba(0, 0, 0, 0.25);
     }
   }
 }
